--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>Kuis Hacktiv</title>
   </head>
 
-  <body style="overflow:hidden;">
+  <body>
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
