--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script src="https://kuis-hacktiv.herokuapp.com/socket.io/socket.io.js"></script>
   </body>
   <link
     rel="stylesheet"
